[ POM ] : Update dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
         <!-- Springfox (Swagger)-->
         <springfox.version>2.4.0</springfox.version>
 
+        <!-- Riot project -->
+        <riot-database-mongo.version>1.0.0</riot-database-mongo.version>
+
         <!-- Test -->
         <junit.version>4.12</junit.version>
     </properties>
@@ -47,10 +50,11 @@
             <version>${logback-classic.version}</version>
         </dependency>
 
+        <!-- Riot project -->
         <dependency>
             <groupId>vgalloy</groupId>
             <artifactId>riot-database-mongo</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${riot-database-mongo.version}</version>
         </dependency>
 
         <!-- Aspect -->
